Refactor authentication system: rename core service, remove old login/register APIs, implement new branch manager and customer authentication flows, add OTP functionality for registration and password reset, and integrate email notifications.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "corequarry-api",
+  "name": "corequarry-core-service",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,6 +15,7 @@
     "lucide-react": "^0.554.0",
     "mongoose": "^8.20.0",
     "next": "16.0.3",
+    "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -23,6 +24,7 @@
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
