--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "rm -rf .next .turbo node_modules"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
