refactor: remove deprecated branch API endpoints and replace Google GenAI with Groq SDK for AI interactions

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "clean": "rm -rf .next .turbo node_modules"
   },
   "dependencies": {
-    "@google/genai": "^1.30.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
     "mongoose": "^8.20.0",
