refactor: update sidebar text size and change app title to "MekarJS ERP Core Service"
- Adjusted text size in Sidebar component from text-xl to text-xs for better readability.
- Updated the title in the _app.tsx file to "MekarJS ERP Core Service".
- Changed package name in package.json and package-lock.json from "corequarry-core-service" to "mekarjs-erp-core-service".
- Updated AWS SDK dependencies to version 3.940.0 in package-lock.json.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "corequarry-core-service",
+  "name": "mekarjs-erp-core-service",
   "version": "0.1.0",
   "private": true,
   "scripts": {
