feat: implement functional Gemini LLM integration with error handling and relocate AI LLM endpoints to a new path.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "clean": "rm -rf .next .turbo node_modules"
   },
   "dependencies": {
+    "@google/genai": "^1.33.0",
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "groq-sdk": "^0.37.0",
